src/hotspot/share/opto/type.hpp
@@ -452,7 +452,6 @@ public:
   const Type* maybe_remove_speculative(bool include_speculative) const;
 
   virtual bool maybe_null() const { return true; }
-  virtual bool is_known_instance() const { return false; }
 
 private:
   // support arrays
@@ -1396,10 +1395,6 @@ public:
   // returns the equivalent ptr type for this compressed pointer
   const TypePtr *get_ptrtype() const {
     return _ptrtype;
-  }
-
-  bool is_known_instance() const {
-    return _ptrtype->is_known_instance();
   }
 
 #ifndef PRODUCT
